# ML4NS-project

./: .gitignore  LICENSE  README.md  environment.yaml  fireprot_metadata.csv  plan.md  results_summary.csv  run_all_oracles.sh  run_batch_test.sh  run_regression_pipeline.sh  setup.py  week1_mar6-mar8.md
PLDMNEW/: README.md  baseline_pldm_sample.py  pyproject.toml  run_full_tfg_results_uv.sh  run_tfg_8chains_uv.sh  run_tfg_generation_uv.sh  tfg_analysis.py  tfg_compare_study.py  tfg_generation.py
PLDMNEW/generated_seq/: tfg_esm2_smoke.csv  tfg_esm2_smoke_meta.json  tfg_generation_1000.csv  tfg_generation_1000_meta.json  tfg_smoke.csv  tfg_smoke_meta.json
PLDM_COMPARISON_SUITE/: DATASETS.md  IMPLEMENTATION_SUMMARY.md  MATHEMATICAL_VERIFICATION.md  evaluate_and_plot.py  evaluate_method.py  generate_sequences.py  merge_and_plot.py  pipeline_utils.py  pyproject.toml  run_all.sh  run_all_datasets.sh  run_pipeline.py  sampler_ess.py
PLDM_COMPARISON_SUITE/baseline/: eval_baseline.sh  generate_baseline.sh  run_baseline.sh
PLDM_COMPARISON_SUITE/common/: run_common_plots.sh
PLDM_COMPARISON_SUITE/data/: mut_data
PLDM_COMPARISON_SUITE/ess/: eval_ess.sh  generate_ess.sh  run_ess.sh
PLDM_COMPARISON_SUITE/ress/: README.md  generate_ress.py  run_ress.sh
PLDM_COMPARISON_SUITE/tess/: eval_tess.sh  generate_tess.sh  run_tess.sh
PLDM_COMPARISON_SUITE/train_logs/: GFP
PLDM_COMPARISON_SUITE/transport/: eval_transport.sh  generate_transport.sh  run_transport.sh
PLDM_COMPARISON_SUITE/trial_runs/: ess_d0.02.json  ess_d0.05.json  ess_d0.1.json  ess_d0.5.json  (+6 more)
(+149 files in other folders)
