[project]
name = "pldm-comparison-suite"
version = "0.1.0"
description = "Baseline PRO-LDM vs ESS/TESS comparison pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "torch>=2.6",
  "transformers>=4.40",
  "sentencepiece>=0.2.0",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "umap-learn>=0.5.6",
]

[tool.uv]
package = false
