[project]
name = "pldm-comparison-suite"
version = "0.1.0"
description = "Baseline PRO-LDM vs ESS/TESS comparison pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "torch>=2.6",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "umap-learn>=0.5.6",
  "transformers>=4.48",
]

[tool.uv]
package = false
